--- a/assets/Ebook/ebook.html
+++ b/assets/Ebook/ebook.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 
 <head>
-	<title>브랜드명</title>
+	<title>CLIMAX</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width = 1050, user-scalable = no" />
 	<link rel="icon" type="image/png" href="../../pics/favicon.png" />
