--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 	<link rel="shortcut icon" href="./images/con6.png" type="image/png">
 
+	<link rel="stylesheet"
+		href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
+
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css">
 	</noscript>
@@ -45,12 +48,14 @@
 
 		<!-- intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
-			<div class="inner">
+			<div class="inner2">
 				<h1>Portfolio</h1>
-				<p>감정과 에너지가 교차하는 순간을 담아내는 디자이너 옥수미입니다.
+				<p>감정과 에너지가 교차하는 순간을 담아내는 <br>디자이너 옥수미입니다.
 				</p>
-				<p>UI/UX Design</p>
-				<p>Design Portfolio</p>
+				<div>
+					<p class="design">UI/UX Design</p>
+					<p class="design">Design Portfolio</p>
+				</div>
 			</div>
 		</section>
 
@@ -59,70 +64,79 @@
 			<div class="inner">
 				<h2>About Me</h2>
 
-				<div class="split style1">
-					<section>
-						<img src="./images/am.png" alt="img">
-						<h3>Epilogue</h3>
-						<h5>감정과 에너지가 만나는 지점을 찾는 디자인</h5>
-						<p>
-							사람들이 느끼는 감정은 그 자체로 강렬한 에너지로 변할 수 있다고 믿습니다.
-							저는 그런 감정의 흐름과 에너지의 충돌을 포착해, 사용자가 자연스럽게 몰입하고 감정을 공유할 수 있는 경험을 만들고자 합니다. 디자인은 단순히 시각적 요소가 아니라,
-							사람과 사람 사이의 에너지를 이어주는 매개라고 생각합니다.
-							<br> <br>
-							저는 감정과 에너지가 교차하는 순간들을 시각적으로 풀어내며, 마음을 움직이는 디자인을 만들어가고 싶습니다.
-						</p>
+				<div class="aboutme">
+					<section class="about">
+						<section class="about_in">
+							<img src="./images/am.png" alt="img">
+							<div>
+								<h3>Epilogue</h3>
+								<h5>감정과 에너지가 만나는 지점을 찾는 디자인</h5>
+								<p class="about_p1">
+									사람들이 느끼는 감정은 그 자체로 강렬한 에너지로 변할 수 있다고 믿습니다.
+									저는 그런 감정의 흐름과 에너지의 충돌을 포착해, 사용자가 자연스럽게 몰입하고 감정을 공유할 수 있는 경험을 만들고자 합니다. 디자인은 단순히 시각적
+									요소가
+									아니라,
+									사람과 사람 사이의 에너지를 이어주는 매개라고 생각합니다.
+								</p>
+								<p class="about_p2">
+									저는 감정과 에너지가 교차하는 순간들을 시각적으로 풀어내며, 마음을 움직이는 디자인을 만들어가고 싶습니다.
+								</p>
+							</div>
+						</section>
+						<div class="cb">
+							<ul class="contact">
+								<li>
+									<h4>Name</h4>
+									<span>옥 수 미</span>
+								</li>
+								<li>
+									<h4>Birth</h4>
+									<span>1999.06.01</span>
+								</li>
+								<li>
+									<h4>Mobile</h4>
+									<span>010.9121.6474</span>
+								</li>
+								<li>
+									<h4>Email</h4>
+									<ul>
+										<li>tnalqkd@naver.com</li>
+									</ul>
+								</li>
+							</ul>
+							<ul class="contact2">
+								<li>
+									<h4>Certification</h4>
+									<span>자동차운전면허증 1종 보통 (2022.04) <br>
+										방송SNS콘텐츠전문가1급 (2023.02)</span>
+								</li>
+							</ul>
+							<ul class="contact3">
+								<li>
+									<h4>Education</h4>
+									<span>2018.02 경남여자고등학교 졸업 <br>
+										2024.02 동명대학교 디지털콘텐츠전공 졸업 <br>
+										2025.07 나래디자인학원 UI/UX 반응협 웹디자인 수료</span>
+								</li>
+							</ul>
+						</div>
 
 					</section>
-					<section>
-						<ul class="contact">
-							<li>
-								<h4>Name</h4>
-								<span>옥 수 미</span>
-							</li>
-							<li>
-								<h4>Birth</h4>
-								<span>1999.06.01</span>
-							</li>
-							<li>
-								<h4>Mobile</h4>
-								<span>010.9121.6474</span>
-							</li>
-							<li>
-								<h4>Email</h4>
-								<ul class="icons">
-									<a href="#">tnalqkd@naver.com</a>
-								</ul>
-							</li>
-						</ul>
-					</section>
-					<section>
-						<ul class="contact">
-							<li>
-								<h4>Certification</h4>
-								<span>자동차운전면허증 1종 보통 (2022.04) <br>
-									방송SNS콘텐츠전문가1급 (2023.02)</span>
-							</li>
-							<li>
-								<h4>Education</h4>
-								<span>2018.02 경남여자고등학교 졸업 <br>
-									2024.02 동명대학교 디지털콘텐츠전공 졸업 <br>
-									2025.07 나래디자인학원 UI/UX 반응협 웹디자인 수료</span>
-							</li>
 
-						</ul>
-					</section>
+
 				</div>
 			</div>
 		</section>
 
 		<!-- two -->
 		<section id="two" class="wrapper style2 spotlights fade-up">
+
 			<div class="portfolio">
 				<img src="./images/port1.png" alt="image" data-position="center center">
 				<div class="portfolio_text">
-					<h2><img src="./images/logo.png" alt="logo"></h2>
-					<p>Beyond Music, Into Memories</p>
-					<p>CLIMAX는 최고의 순간, 열광, 절정을 담은 K-pop 페스티벌 입니다.</p>
+					<h2><img src="./images/logo.png" alt="logo" class="logo"></h2>
+					<p class="pf2">Beyond Music, Into Memories</p>
+					<p class="pf">CLIMAX는 최고의 순간, 열광, 절정을 담은 K-pop 페스티벌 입니다.</p>
 					<div class="button_box">
 						<a href="#" target="_blank" class="button">Homepage</a>
 						<a href="./assets/guide/bibx.html" target="_blank" class="button">BI & BX Guide</a>
@@ -130,14 +144,15 @@
 						<a href="./assets/Ebook/ebook.html" target="_blank" class="button">E-book</a>
 					</div>
 				</div>
+
 			</div>
 			<div class="portfolio">
 				<img src="./images/port2.png" alt="image" data-position="center center">
 				<div class="portfolio_text">
-					<h2>Promotion Page</h2>
-					<p>올 해 개최 될 제2회 CLIMAX 공연 홍보 페이지 입니다.</p>
+					<h2 class="Promotion">Promotion Page</h2>
+					<p class="pf">올 해 개최 될 제2회 CLIMAX 공연 홍보 페이지 입니다.</p>
 					<div class="button_box">
-						<a href="#" target="_blank" class="button">Promotion Page</a>
+						<a href="./assets/guide/promotion.html" target="img" class="button">Promotion Page</a>
 					</div>
 				</div>
 			</div>
@@ -171,15 +186,15 @@
 
 		<!-- four -->
 		<section id="four" class="wrapper style3 fade-up">
+
 			<div class="inner">
 				<h2>Skill</h2>
-
 				<div class="features">
 					<section>
 						<span class="icon icon-photo"></span>
 						<h3>Photoshop</h3>
-						<div class="chart" data-percent="70" data-scale-color="#ffb400">
-							<span class="animate5" data-rate="70">
+						<div class="chart" data-percent="82">
+							<span class="animate1" data-rate="82">
 							</span>
 						</div>
 					</section>
@@ -187,8 +202,8 @@
 					<section>
 						<span class="icon icon-edit"></span>
 						<h3>Illustrator</h3>
-						<div class="chart" data-percent="70" data-scale-color="#ffb400">
-							<span class="animate5" data-rate="70">
+						<div class="chart" data-percent="78">
+							<span class="animate2" data-rate="78">
 							</span>
 						</div>
 					</section>
@@ -196,8 +211,8 @@
 					<section>
 						<span class="icon icon-video-camera"></span>
 						<h3>Indesign</h3>
-						<div class="chart" data-percent="70" data-scale-color="#ffb400">
-							<span class="animate5" data-rate="70">
+						<div class="chart" data-percent="75">
+							<span class="animate3" data-rate="75">
 							</span>
 						</div>
 					</section>
@@ -205,8 +220,8 @@
 					<section>
 						<span class="icon icon-video-camera"></span>
 						<h3>Premiere Pro</h3>
-						<div class="chart" data-percent="70" data-scale-color="#ffb400">
-							<span class="animate5" data-rate="70">
+						<div class="chart" data-percent="87">
+							<span class="animate4" data-rate="87">
 							</span>
 						</div>
 					</section>
@@ -214,8 +229,8 @@
 					<section>
 						<span class="icon icon-video-camera"></span>
 						<h3>After Effects</h3>
-						<div class="chart" data-percent="70" data-scale-color="#ffb400">
-							<span class="animate5" data-rate="70">
+						<div class="chart" data-percent="85">
+							<span class="animate5" data-rate="85">
 							</span>
 						</div>
 					</section>
@@ -223,8 +238,8 @@
 					<section>
 						<span class="icon icon-code"></span>
 						<h3>HTML&CSS</h3>
-						<div class="chart" data-percent="70" data-scale-color="#ffb400">
-							<span class="animate5" data-rate="70">
+						<div class="chart" data-percent="64">
+							<span class="animate6" data-rate="64">
 							</span>
 						</div>
 					</section>
@@ -233,8 +248,8 @@
 						<span class="icon icon-code"></span>
 						<h3>Figma</h3>
 
-						<div class="chart" data-percent="70" data-scale-color="#ffb400">
-							<span class="animate5" data-rate="70">
+						<div class="chart" data-percent="90">
+							<span class="animate7" data-rate="90">
 							</span>
 						</div>
 					</section>
@@ -249,10 +264,7 @@
 	<!-- Footer -->
 	<footer id="footer" class="wrapper style1-alt">
 		<div class="inner">
-			<ul class="menu">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
+
 		</div>
 	</footer>
 
@@ -271,7 +283,6 @@
 			<img src="./images/pic02.jpg" alt="팝업 이미지1">
 			<img src="./images/pic02.jpg" alt="팝업 이미지2">
 		</div>
-	</div>
 	</div>
 	<!-- /Popup -->
 
