--- a/assets/Ebook/ebook.html
+++ b/assets/Ebook/ebook.html
@@ -16,7 +16,7 @@
 <body>
 
 	<!-- 버튼 -->
-	<a href="../../index.html#one" class="btn_1">Home</a>
+	<a href="../../index.html#two" class="btn_1">Home</a>
 
 	<div id="canvas">
 
@@ -79,7 +79,7 @@
 
 				// The number of pages, 페이지수 수정
 
-				pages: 12,
+				pages: 10,
 
 				// Events
 
