--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<p class="pf2">Beyond Music, Into Memories</p>
 					<p class="pf">CLIMAX는 최고의 순간, 열광, 절정을 담은 K-pop 페스티벌 입니다.</p>
 					<div class="button_box">
-						<a href="#" target="_blank" class="button">Homepage</a>
+						<a href="https://oksumi.github.io/CLIMAX/" target="_blank" class="button">Homepage</a>
 						<a href="./assets/guide/bibx.html" target="_blank" class="button">BI & BX Guide</a>
 						<a href="./assets/guide/web.html" target="_blank" class="button">Web Guide</a>
 						<a href="./assets/Ebook/ebook.html" target="_blank" class="button">E-book</a>
