--- a/assets/guide/promotion.html
+++ b/assets/guide/promotion.html
@@ -16,7 +16,7 @@
         <!-- 버튼 -->
         <ul class="btn_1">
 			<li><a href="#">Top</a></li>
-			<li><a href="../../index.html#one">Home</a></li>
+			<li><a href="../../index.html#two">Home</a></li>
 		</ul>
     </div>
 </body>
