--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 					<section>
 						<img src="./images/pic01.jpg" alt="pic1" class="art1">
 						<div class="art_text">
-							<h4>제목</h4>
-							<p>설명</p>
+							<h4>뮤지컬 레드북</h4>
+							<p>뮤지컬 레드북을 홍보하기 위한 카드뉴스 입니다.</p>
 							<a href="#none" class="button" id="popup01">More</a>
 						</div>
 					</section>
@@ -272,8 +272,8 @@
 	<div class="popup" id="pop01">
 		<div class="popup_in">
 			<i class="icon-close"></i>
-			<img src="./images/pic01.jpg" alt="팝업 이미지1">
-			<img src="./images/pic01.jpg" alt="팝업 이미지2">
+			<img src="./images/pop1.jpg" alt="팝업 이미지1">
+			<img src="./images/pop2.jpg" alt="팝업 이미지2">
 		</div>
 	</div>
 
