--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
 						</div>
 					</section>
 					<section>
-						<img src="./images/pic02.jpg" alt="pic2" class="art2">
+						<!-- <img src="./images/pic02.jpg" alt="pic2" class="art2">
 						<div class="art_text">
 							<h4>제목</h4>
 							<p>설명</p>
 							<a href="#none" class="button" id="popup02">More</a>
-						</div>
+						</div> -->
 					</section>
 				</div>
 			</div>
